--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <script src="//www.laanonima.com.ar/contents/themes/responsive/bower_components/jquery-1.12.1.min/jquery.min.js"></script>
 
-<meta property="og:url"                content="https://www.laanonima.com.ar/" />
+<meta property="og:url"                content="https://pluslaanonima.page.link/Home" />
 <meta property="og:type"               content="article" />
 <meta property="og:title"              content="Supermercados La Anónima" />
 <meta property="og:description"        content="Página oficial de Supermercados La Anónima. Atención al cliente 0810-555-0222" />
