--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="msapplication-tap-highlight" content="no" />
 
-    <meta property="al:ios:url" content="https://pluslaanonima.page.link/Home" /> 
+    <meta property="al:ios:url" content="pluslaanonima.page.link/Home" /> 
 
     <meta property="al:ios:app_store_id" content="1489954011" />
 
